==> K7MDL2/RP2350-SDR-CW-Interface/lib/pico_st7735_80x160/lcd.c <==
#include "lcd.h"
#include "pico.h"
#include "hardware/pwm.h"
#include "pico/stdlib.h"
#include "lcd_private.h"
#include "oledfont.h"
#define LCD_WIDTH 160
#define LCD_HEIGHT 80
#define OLED_CS_Clr() gpio_put(_config.pin_cs, 0)
#define OLED_CS_Set() gpio_put(_config.pin_cs, 1)
#define OLED_RST_Clr() gpio_put(_config.pin_rst, 0)
#define OLED_RST_Set() gpio_put(_config.pin_rst, 1)
#define OLED_DC_Clr() gpio_put(_config.pin_dc, 0)
#define OLED_DC_Set() gpio_put(_config.pin_dc, 1)
#define DEFAULT_PWM_BLK_LEVEL 196
#define OLED_CMD  0 //write command
#define OLED_DATA 1 //write data

static void spi_config(void)
{
    gpio_init(_config.pin_sck);
    gpio_set_function(_config.pin_sck, GPIO_FUNC_SPI);

    gpio_init(_config.pin_mosi);
    gpio_set_function(_config.pin_mosi, GPIO_FUNC_SPI);

    gpio_init(_config.pin_cs);
    gpio_set_dir(_config.pin_cs, GPIO_OUT);

    spi_init(_config.spi_inst, _config.clk_freq);

    /* SPI parameter config */
    spi_set_format(
        _config.spi_inst,
        8, /* data_bits */
        SPI_CPOL_0, /* cpol */
        SPI_CPHA_0, /* cpha */
        SPI_MSB_FIRST /* order */
    );

    OLED_CS_Set();
}

void LCD_Writ_Bus(u8 dat)
{
    OLED_CS_Clr();

    uint8_t *buff = (uint8_t *) &dat;
    spi_write_blocking(_config.spi_inst, buff, 1);

    OLED_CS_Set();
}

void LCD_Init(void)
{
    gpio_init(_config.pin_dc);
    gpio_set_dir(_config.pin_dc, GPIO_OUT);

    gpio_init(_config.pin_rst);
    gpio_set_dir(_config.pin_rst, GPIO_OUT);

    if (_config.pwm_blk)
    {
        set_blk_pwm();
    }
    else
    {
        set_blk_gpio();
    }

    spi_config();

    OLED_RST_Clr();
    sleep_ms(200);
    OLED_RST_Set();
    sleep_ms(20);
    OLED_BLK_Set();

    LCD_WR_REG(0x11);   // turn off sleep mode
    sleep_ms(100);

    if (_config.inversion)
    {
        LCD_WR_REG(0x21);   // display inversion mode
    }

    LCD_WR_REG(0xB1);   // Set the frame frequency of the full colors normal mode
                        // Frame rate=fosc/((RTNA x 2 + 40) x (LINE + FPA + BPA +2))
                        // fosc = 850kHz
    LCD_WR_DATA8(0x05); // RTNA
    LCD_WR_DATA8(0x3A); // FPA
    LCD_WR_DATA8(0x3A); // BPA

    LCD_WR_REG(0xB2);   // Set the frame frequency of the Idle mode
                        // Frame rate=fosc/((RTNB x 2 + 40) x (LINE + FPB + BPB +2))
                        // fosc = 850kHz
    LCD_WR_DATA8(0x05); // RTNB
    LCD_WR_DATA8(0x3A); // FPB
    LCD_WR_DATA8(0x3A); // BPB

    LCD_WR_REG(0xB3);   // Set the frame frequency of the Partial mode/ full colors
    LCD_WR_DATA8(0x05);
    LCD_WR_DATA8(0x3A);
    LCD_WR_DATA8(0x3A);
    LCD_WR_DATA8(0x05);
    LCD_WR_DATA8(0x3A);
    LCD_WR_DATA8(0x3A);

    LCD_WR_REG(0xB4);
    LCD_WR_DATA8(0x03);

    LCD_WR_REG(0xC0);
    LCD_WR_DATA8(0x62);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x04);

    LCD_WR_REG(0xC1);
    LCD_WR_DATA8(0xC0);

    LCD_WR_REG(0xC2);
    LCD_WR_DATA8(0x0D);
    LCD_WR_DATA8(0x00);

    LCD_WR_REG(0xC3);
    LCD_WR_DATA8(0x8D);
    LCD_WR_DATA8(0x6A);

    LCD_WR_REG(0xC4);
    LCD_WR_DATA8(0x8D);
    LCD_WR_DATA8(0xEE);

    LCD_WR_REG(0xC5);  /*VCOM*/
    LCD_WR_DATA8(0x0E);

    LCD_WR_REG(0xE0);
    LCD_WR_DATA8(0x10);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x03);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x07);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x07);
    LCD_WR_DATA8(0x0A);
    LCD_WR_DATA8(0x12);
    LCD_WR_DATA8(0x27);
    LCD_WR_DATA8(0x37);
    LCD_WR_DATA8(0x00);
    LCD_WR_DATA8(0x0D);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x10);

    LCD_WR_REG(0xE1);
    LCD_WR_DATA8(0x10);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x03);
    LCD_WR_DATA8(0x03);
    LCD_WR_DATA8(0x0F);
    LCD_WR_DATA8(0x06);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x08);
    LCD_WR_DATA8(0x0A);
    LCD_WR_DATA8(0x13);
    LCD_WR_DATA8(0x26);
    LCD_WR_DATA8(0x36);
    LCD_WR_DATA8(0x00);
    LCD_WR_DATA8(0x0D);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x10);

    LCD_WR_REG(0x3A);   // define the format of RGB picture data
    LCD_WR_DATA8(0x05); // 16-bit/pixel

    LCD_SetRotation(_rotation);
    /*
    // Memory data access control (MADCTL)
    LCD_WR_REG(0x36);
    if(_rotation==0)LCD_WR_DATA8(0x00 | (_config.rgb_order<<3));
    else if(_rotation==1)LCD_WR_DATA8(0xC0 | (_config.rgb_order<<3));
    else if(_rotation==2)LCD_WR_DATA8(0x70 | (_config.rgb_order<<3));
    else LCD_WR_DATA8(0xA0 | (_config.rgb_order<<3));
    */

    LCD_WR_REG(0x29);   // Display On
}
